försökt räta ut koden

--- a/kurssida.html
+++ b/kurssida.html
@@ -50,7 +50,7 @@
                                 1.4875SEK.
                                 <br>
                                 </p>
-                                <span class="buy" id="buyInternet" onclick="addCoursToCart('1')">Köp</span>
+                                <span class="buy" id="buyInternet" onclick="addCourseToCart('1')">Köp</span>
                             </div>
                             <div class="grid-item" id="ProgSpråk">
                                 <h1>C#, Java, C++ och mycket mer. (2)</h1>
