delete buttons in cart has been added

--- a/kurssida.html
+++ b/kurssida.html
@@ -41,7 +41,7 @@
                         </div>
                         <div id="courses" class="courses">
                             <div class="grid-item" id="Internetkunskap">
-                                <h1>Vad är internet? (1)</h1>
+                                <h1>Vad är internet? </h1>
                                 <img src="imagesvideos/pexels-pixabay-147413.jpg" />
                                 <p>Start: VT-23.
                                 <br>
@@ -53,7 +53,7 @@
                                 <span class="buy" onclick="addCourseToCart('1')">Köp</span>
                             </div>
                             <div class="grid-item" id="ProgSpråk">
-                                <h1>C#, Java, C++ och mycket mer. (2)</h1>
+                                <h1>C#, Java, C++ och mycket mer.</h1>
                                 <img src="imagesvideos/pexels-markus-spiske-2004161.jpg">
                                 <p>Start: HT-22.
                                 <br>
@@ -65,7 +65,7 @@
                                 <span class="buy" onclick="addCourseToCart ('2')">Köp</span>
                             </div>
                             <div class="grid-item" id="AI">
-                                <h1>AI - <br> Prata med robotar. (3)</h1>
+                                <h1>AI - <br> Prata med robotar.</h1>
                                 <img src="imagesvideos/pexels-alex-knight-2599244.jpg">
                                 <p>Start: HT-22.
                                 <br>
@@ -77,7 +77,7 @@
                                 <span class="buy" onclick="addCourseToCart ('3')">Köp</span>
                             </div>
                             <div class="grid-item" id="Cloud">
-                                <h1>Cloud - <br> Mer än fluffiga moln.(4)</h1>
+                                <h1>Cloud - <br> Mer än fluffiga moln.</h1>
                                 <img src="imagesvideos/pexels-brett-sayles-2100921.jpg">
                                 <p>Start: VT-23.
                                 <br>
@@ -89,7 +89,7 @@
                                 <span class="buy" onclick="addCourseToCart ('4')">Köp</span>
                             </div>
                             <div class="grid-item" id="OfficePaketet">
-                                <h1>Office 365, grundkurs. (5)</h1>
+                                <h1>Office 365, grundkurs.</h1>
                                 <img src="imagesvideos/pexels-photo-574069.jpeg">
                                 <p>Start: VT-23,
                                 <br>
@@ -100,7 +100,7 @@
                                 <span class="buy" onclick="addCourseToCart ('5')">Köp</span>
                             </div>
                             <div class="grid-item" id="Paint">
-                                <h1>Paint - <br> Din bästa vän. (6)</h1>
+                                <h1>Paint - <br> Din bästa vän.</h1>
                                 <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
                                 <p>Start: HT-22.
                                 <br>
@@ -112,7 +112,7 @@
                                 <span class="buy" onclick="addCourseToCart ('6')">Köp</span>
                             </div>
                             <div class="grid-item" id="OfficePaketet-Advanced">
-                                <h1>Office 365, Advanced. (7)</h1>
+                                <h1>Office 365, Advanced.</h1>
                                 <img src="imagesvideos/pexels-photo-574069.jpeg">
                                 <p>Start: VT-23,
                                 <br>
@@ -124,7 +124,7 @@
                                 <span class="buy" onclick="addCourseToCart('7')">Köp</span>
                             </div>
                             <div class="grid-item" id="paint-Advanced">
-                                <h1>Paint - <br> Din bästa vän, Advanced. (8)</h1>
+                                <h1>Paint - <br> Din bästa vän, Advanced.</h1>
                                 <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
                                 <p>Start: HT-22.
                                 <br>
