done! Endast eventuell småpill kvar

--- a/kurssida.html
+++ b/kurssida.html
@@ -50,7 +50,7 @@
                                 1.4875SEK.
                                 <br>
                                 </p>
-                                <span class="buy" onclick="addCourseToCart('1')">Köp</span>
+                                <span class="buy" onclick="addCourseToCart(0)">Köp</span>
                             </div>
                             <div class="grid-item" id="ProgSpråk">
                                 <h1>C#, Java, C++ och mycket mer.</h1>
@@ -62,7 +62,7 @@
                                 19.475SEK.
                                 <br>
                                 </p>
-                                <span class="buy" onclick="addCourseToCart ('2')">Köp</span>
+                                <span class="buy" onclick="addCourseToCart (1)">Köp</span>
                             </div>
                             <div class="grid-item" id="AI">
                                 <h1>AI - <br> Prata med robotar.</h1>
@@ -74,7 +74,7 @@
                                 <br>
                                 11.250SEK.
                                 </p>
-                                <span class="buy" onclick="addCourseToCart ('3')">Köp</span>
+                                <span class="buy" onclick="addCourseToCart (2)">Köp</span>
                             </div>
                             <div class="grid-item" id="Cloud">
                                 <h1>Cloud - <br> Mer än fluffiga moln.</h1>
@@ -86,7 +86,7 @@
                                 22.725SEK.
                                 <br>
                                 </p>
-                                <span class="buy" onclick="addCourseToCart ('4')">Köp</span>
+                                <span class="buy" onclick="addCourseToCart (3)">Köp</span>
                             </div>
                             <div class="grid-item" id="OfficePaketet">
                                 <h1>Office 365, grundkurs.</h1>
@@ -97,7 +97,7 @@
                                 1.475SEK.
                                 <br>
                                 </p>
-                                <span class="buy" onclick="addCourseToCart ('5')">Köp</span>
+                                <span class="buy" onclick="addCourseToCart (4)">Köp</span>
                             </div>
                             <div class="grid-item" id="Paint">
                                 <h1>Paint - <br> Din bästa vän.</h1>
@@ -109,7 +109,7 @@
                                 1.475SEK.
                                 <br>
                                 </p>
-                                <span class="buy" onclick="addCourseToCart ('6')">Köp</span>
+                                <span class="buy" onclick="addCourseToCart (5)">Köp</span>
                             </div>
                             <div class="grid-item" id="OfficePaketet-Advanced">
                                 <h1>Office 365, Advanced.</h1>
@@ -121,7 +121,7 @@
                                 12.368SEK.
                                 <br>
                                 </p>
-                                <span class="buy" onclick="addCourseToCart('7')">Köp</span>
+                                <span class="buy" onclick="addCourseToCart(6)">Köp</span>
                             </div>
                             <div class="grid-item" id="paint-Advanced">
                                 <h1>Paint - <br> Din bästa vän, Advanced.</h1>
@@ -133,7 +133,7 @@
                                 10.205SEK.
                                 <br>
                                 </p>
-                                <span class="buy" onclick="addCourseToCart ('8')">Köp</span>
+                                <span class="buy" onclick="addCourseToCart (7)">Köp</span>
                             </div>
                         </div>
                         <div class="alert">
