--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
                 <div class="topnav"><a href="index.html">WestCoast Education</a>
                     <div id="myLinks">
-                        <a href="Kurssida.html">Kurssida</a>
+                        <a href="kurssida.html">Kurssida</a>
                     </div>
                     <a href="javascript:void(0);" class="icon" onclick="myBurgerMenu()">
                         <i class="fa fa-bars"></i>
