alt-texter tillagda

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
                 <video class="video" controls autoplay>
-                    <source src="imagesvideos/video.mp4" />
+                    <source src="imagesvideos/video.mp4" alt="Youtube-klipp på en flicka vid en strand."/>
                 </video>
         <header>
                 <div class="topnav"><a href="index.html">WestCoast Education</a>
@@ -45,7 +45,7 @@
                 <br>
                 <br>
             </p>
-                <image id="computer" src="imagesvideos/pexels-photo-3568521.jpeg" />
+                <image id="computer" src="imagesvideos/pexels-photo-3568521.jpeg" alt="En rund bild på en dator, tidning och klocka samt övriga kontorsmaterial"/>
         </div>
     <div class="footer">All rights reserved West Coast Education.</div>
     <script src="scripts/arrays.js" async></script>
