--- a/kurssida.html
+++ b/kurssida.html
@@ -26,7 +26,7 @@
         <div id="kurser" class="kurser">
                     <div class="container">
                         <header>
-                            <img id="cabin" src="red-g59a8ffb41_1920.jpg" />
+                            <img id="cabin" src="red-g59a8ffb41_1920.jpg" alt="En röd stuga på en klippa vid havet."/>
                         </header>
                         <div class="rubrik">
                             <p>
@@ -40,7 +40,7 @@
                         <div id="courses" class="courses">
                             <div class="grid-item" id="Internetkunskap">
                                 <h1>Vad är internet? </h1>
-                                <img src="imagesvideos/pexels-pixabay-147413.jpg" />
+                                <img src="imagesvideos/pexels-pixabay-147413.jpg" alt="Bild på appar"/>
                                 <p>Start: VT-23.
                                 <br>
                                 15HP
@@ -52,7 +52,7 @@
                             </div>
                             <div class="grid-item" id="ProgSpråk">
                                 <h1>C#, Java, C++ och mycket mer.</h1>
-                                <img src="imagesvideos/pexels-markus-spiske-2004161.jpg">
+                                <img src="imagesvideos/pexels-markus-spiske-2004161.jpg" alt="programmeringskod i olika färger.">
                                 <p>Start: HT-22.
                                 <br>
                                 60HP.
@@ -64,7 +64,7 @@
                             </div>
                             <div class="grid-item" id="AI">
                                 <h1>AI - <br> Prata med robotar.</h1>
-                                <img src="imagesvideos/pexels-alex-knight-2599244.jpg">
+                                <img src="imagesvideos/pexels-alex-knight-2599244.jpg" alt="Vit robot som kollar på fotografen.">
                                 <p>Start: HT-22.
                                 <br>
                                 15HP.
@@ -76,7 +76,7 @@
                             </div>
                             <div class="grid-item" id="Cloud">
                                 <h1>Cloud - <br> Mer än fluffiga moln.</h1>
-                                <img src="imagesvideos/pexels-brett-sayles-2100921.jpg">
+                                <img src="imagesvideos/pexels-brett-sayles-2100921.jpg" alt="Vita fluffiga moln på blå himmel.">
                                 <p>Start: VT-23.
                                 <br>
                                 30HP.
@@ -88,7 +88,7 @@
                             </div>
                             <div class="grid-item" id="OfficePaketet">
                                 <h1>Office 365, grundkurs.</h1>
-                                <img src="imagesvideos/pexels-photo-574069.jpeg">
+                                <img src="imagesvideos/pexels-photo-574069.jpeg" alt="En person sitter vid laptop">
                                 <p>Start: VT-23,
                                 <br>
                                 7HP<br>
@@ -99,7 +99,7 @@
                             </div>
                             <div class="grid-item" id="Paint">
                                 <h1>Paint - <br> Din bästa vän.</h1>
-                                <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
+                                <img src="imagesvideos/pexels-deeana-arts-1576210.jpg" alt="karta med vattenfärger, olika färger.">
                                 <p>Start: HT-22.
                                 <br>
                                 7HP
@@ -111,7 +111,7 @@
                             </div>
                             <div class="grid-item" id="OfficePaketet-Advanced">
                                 <h1>Office 365, Advanced.</h1>
-                                <img src="imagesvideos/pexels-photo-574069.jpeg">
+                                <img src="imagesvideos/pexels-photo-574069.jpeg" alt="En person sitter vid laptop">
                                 <p>Start: VT-23,
                                 <br>
                                 15HP
@@ -123,7 +123,7 @@
                             </div>
                             <div class="grid-item" id="paint-Advanced">
                                 <h1>Paint - <br> Din bästa vän, Advanced.</h1>
-                                <img src="imagesvideos/pexels-deeana-arts-1576210.jpg">
+                                <img src="imagesvideos/pexels-deeana-arts-1576210.jpg" alt="karta med vattenfärger, olika färger.">
                                 <p>Start: HT-22.
                                 <br>
                                 15HP
